updated to newest code from twidere